--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "multer": "^2.0.2",
+    "razorpay": "^2.9.6",
     "uuid": "^13.0.0"
   }
 }
